--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
   <head>
-  
+  <style>
+     <link rel="stylesheet" type="text/css" href="./style.css" />
+  </style>
     <title>My Web Page</title>
   
   </head>
   <body>
   
     <h1>Hello!</h1>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+   
   </body>
 
 </html>
